--- a/frontend/src/assets/i18n/it.json
+++ b/frontend/src/assets/i18n/it.json
@@ -491,8 +491,10 @@
   },
   "RELATION": {
     "ADD": "Aggiungere un collegamento",
+    "UPDATE": "Modifica il collegamento",
     "DELETE": "Eliminare il collegamento",
     "ADD_SUCCESS_MSG": "Il collegamento desiderato è stato aggiunto.",
+    "UPDATE_SUCCESS_MSG": "Il link desiderato è stato aggiornato con successo.",
     "DELETE_SUCCESS_MSG": "L'eliminazione del collegamento selezionato è avvenuta con successo."
   },
   "WORKFLOW": {
