--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -491,10 +491,10 @@
   },
   "RELATION": {
     "ADD": "Verknüpfung hinzufügen",
-    "UPDATE": "Verknüfung editieren",
+    "UPDATE": "Verknüpfung editieren",
     "DELETE": "Verknüpfung löschen",
     "ADD_SUCCESS_MSG": "Die gewünschte Verknüpfung wurde hinzugefügt.",
-    "UPDATE_SUCCESS_MSG": "Die gewünschte Verknüfung wurde erfolgreich aktualisiert.",
+    "UPDATE_SUCCESS_MSG": "Die gewünschte Verknüpfung wurde erfolgreich aktualisiert.",
     "DELETE_SUCCESS_MSG": "Das Löschen der ausgewählten Verknüpfung war erfolgreich."
   },
   "WORKFLOW": {
