ATLAS-1356: changes after review

--- a/frontend/src/assets/i18n/it.json
+++ b/frontend/src/assets/i18n/it.json
@@ -1267,7 +1267,7 @@
       "NEW": "Nuovo servizio igienico",
       "DETAIL_INFORMATION": "Informazioni sul servizio igienico",
       "DESIGNATION": "Denomimazione",
-      "ADDITIONAL_INFORMATION": "informazioni aggiuntive",
+      "ADDITIONAL_INFORMATION": "Informazioni aggiuntive",
       "WHEELCHAIR_TOILET": "Disponibili servizi igienici accessibili in sedia a rotelle",
       "NOTIFICATION": {
         "ADD_SUCCESS": "Il servizio igienico è stato aggiunto con succeso.",
