--- a/prm-directory/src/docs/asciidocs/rest-api.adoc
+++ b/prm-directory/src/docs/asciidocs/rest-api.adoc
@@ -274,3 +274,19 @@ include::{snippets}/relation-version-controller-api-test/should-get-relations-by
 === Get Relations by Parent Service Point Sloid - Successfully
 
 include::{snippets}/relation-version-controller-api-test/should-get-relations-by-parent-service-point-sloid/auto-section.adoc[]
+
+=== Get Relations with filter - Successfully
+
+include::{snippets}/relation-version-controller-api-test/should-get-relation-versions-with-filter/auto-section.adoc[]
+
+=== Get Relations with filter without match - Successfully
+
+include::{snippets}/relation-version-controller-api-test/should-not-get-relation-versions/auto-section.adoc[]
+
+=== Get Relations with filter array filter - Successfully
+
+include::{snippets}/relation-version-controller-api-test/should-get-relation-versions-with-array-in-filter/auto-section.adoc[]
+
+=== Get Relations with ReferenceElementType filter - Successfully
+
+include::{snippets}/relation-version-controller-api-test/should-get-relation-versions-from-reference-point-type/auto-section.adoc[]
