--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -1049,7 +1049,7 @@
     "BACK_TO_MAP": "Schliessen",
     "AUTOMATIC_SLOID": "wird automatisch vergeben",
     "SLOID_ALREADY_USED": "{{sloid}} ist bereits vergeben.",
-    "NUMBER_ALREADY_USED": "{{number}} ist bereits vergeben."
+    "NUMBER_ALREADY_USED": "Die Dienststellennummer {{number}} ist bereits vergeben."
   },
   "PRM": {
     "TABS": {
