ATLAS-1421: streamline and some testing

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -1318,6 +1318,7 @@
     },
     "RELATIONS": {
       "RELATION": "Verbindung",
+      "NO_REFERENCE_POINT": "Bitte erfassen Sie mindestens einen Referenzpunkt.",
       "STEP_FREE_ACCESS": "Stufenfreier Zugang",
       "TACTIL_VISUAL_MARKS": "Taktil-visuelle Markierungen",
       "CONTRASTING_AREAS": "Kontrastreiche Markierungen",
