ATLAS-1749: Date range simplifications

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -49,6 +49,8 @@
     "FILLED_AUTOMATICALLY": "Automatisch befüllt",
     "VALID_FROM": "Gültig von",
     "VALID_TO": "Gültig bis",
+    "TODAY": "Heute",
+    "TIMETABLE_YEAR_CHANGE": "Fahrplanwechsel",
     "EDIT_ON": "Geändert",
     "EDIT_BY": "Durch",
     "STATUS": "Status",
