--- a/frontend/src/assets/i18n/fr.json
+++ b/frontend/src/assets/i18n/fr.json
@@ -49,6 +49,8 @@
     "FILLED_AUTOMATICALLY": "Remplissage automatique",
     "VALID_FROM": "Valable du",
     "VALID_TO": "Valable au",
+    "TODAY": "Présent",
+    "TIMETABLE_YEAR_CHANGE": "Changement d'horaire",
     "EDIT_ON": "Modifiée",
     "EDIT_BY": "Par",
     "STATUS": "Statut",
