--- a/frontend/src/assets/i18n/it.json
+++ b/frontend/src/assets/i18n/it.json
@@ -49,6 +49,8 @@
     "FILLED_AUTOMATICALLY": "Compilato automaticamente",
     "VALID_FROM": "Valido dal",
     "VALID_TO": "Valido fino al",
+    "TODAY": "Oggi",
+    "TIMETABLE_YEAR_CHANGE": "Cambiamento d'orario",
     "EDIT_ON": "Modificato",
     "EDIT_BY": "Da",
     "STATUS": "Stato",
