ATLAS-1750: add gray scale map

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -1034,7 +1034,8 @@
       "GEOGRAPHY_INFORMATION": "Wenn aktiviert, muss die geografische Lage in einem der beiden Koordinatensysteme erfasst werden."
     },
     "MAP_STYLES": {
-      "SWISSTOPO": "Swisstopo (Schweiz)",
+      "SWISSTOPO": "Swisstopo farbig (Schweiz)",
+      "SWISSTOPO_GRAY": "Swisstopo SW (Schweiz)",
       "OPEN_STREET_MAP": "Openstreetmap (weltweit)",
       "SATELLITE": "Satellit (weltweit)",
       "SATELLITE_SWISS": "Satellit (Schweiz)"
