--- a/frontend/src/assets/i18n/fr.json
+++ b/frontend/src/assets/i18n/fr.json
@@ -1034,7 +1034,8 @@
       "GEOGRAPHY_INFORMATION": "Si activé, les coordonnées doivent être saisies dans l'un des deux systèmes de coordonnées."
     },
     "MAP_STYLES": {
-      "SWISSTOPO": "Swisstopo (Suisse)",
+      "SWISSTOPO": "Swisstopo coloré (Suisse)",
+      "SWISSTOPO_GRAY": "Swisstopo BN (Suisse)",
       "OPEN_STREET_MAP": "Openstreetmap (mondial)",
       "SATELLITE": "Satellite (mondial)",
       "SATELLITE_SWISS": "Satellite (Suisse)"
